samples/_failures_safe/1761130650_bb916f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cea34335.c: In function ‘main’:
./samples/SAFE/__tmp_cea34335.c:155:12: error: missing terminating " character
  155 |     printf("\nSecond matrix:\
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cea34335.c:155:5: error: expected expression at end of input
  155 |     printf("\nSecond matrix:\
      |     ^~~~~~
./samples/SAFE/__tmp_cea34335.c:155:5: error: expected declaration or statement at end of input
